added color to messages

--- a/src/main/resources/templates/group/groupDetailsChat.html
+++ b/src/main/resources/templates/group/groupDetailsChat.html
@@ -113,7 +113,7 @@
             newResponse.appendChild(userLabel);
             newResponse.appendChild(message);
 
-            if('TU MAJSTER PODMIEN' === user){
+            if(username === user){
                 newResponse.setAttribute('class', 'text-right p-3');
                 message.setAttribute('class', 'badge badge-primary text-wrap p-2 text-left');
             }else {
