added autoscrolling on message sent

--- a/src/main/resources/templates/group/groupDetailsChat.html
+++ b/src/main/resources/templates/group/groupDetailsChat.html
@@ -122,6 +122,7 @@
             }
             var respone = document.getElementById('all-messages');
             respone.appendChild(newResponse);
+            newResponse.scrollIntoView(true);
 
         }
         function connect(id) {
