--- a/src/main/resources/templates/group/groupDetailsChat.html
+++ b/src/main/resources/templates/group/groupDetailsChat.html
@@ -42,7 +42,7 @@
                                aria-expanded="false" th:text="${groupName}+' - Chat'" ></a>
                             <div class="dropdown-menu dropdown-menu-right">
                                 <a class="dropdown-item" th:href="@{/group/details/__${groupId}__/members}">Uczestnicy</a>
-                                <a class="dropdown-item" th:href="@{/group/details/__${groupId}__/members}">Szczegóły</a>
+                                <a class="dropdown-item" th:href="@{/group/details/__${groupId}__}">Szczegóły</a>
                                 <a class="dropdown-item" th:href="@{/group/details/__${groupId}__/planning}">Planowanie</a>
                                 <a class="dropdown-item" th:href="@{/group/details/__${groupId}__/expenses}">Wydatki</a>
                             </div>
