--- a/src/main/resources/templates/group/groupDetailsMembers.html
+++ b/src/main/resources/templates/group/groupDetailsMembers.html
@@ -126,7 +126,7 @@
                                href="#" role="button" aria-haspopup="true"
                                aria-expanded="false" th:text="${groupName}+' - Uczestnicy'" ></a>
                             <div class="dropdown-menu dropdown-menu-right">
-                                <a class="dropdown-item" th:href="@{/group/details/__${groupId}__/members}">Szczegóły</a>
+                                <a class="dropdown-item" th:href="@{/group/details/__${groupId}__}">Szczegóły</a>
                                 <a class="dropdown-item" th:href="@{/group/details/__${groupId}__/planning}">Planowanie</a>
                                 <a class="dropdown-item" th:href="@{/group/details/__${groupId}__/expenses}">Wydatki</a>
                                 <a class="dropdown-item" th:href="@{/group/details/__${groupId}__/chat}">Chat</a>
